manifests/golden2/mysql02-01/gw-mysql2-01.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: egress-omega-mysql2-01
  namespace: istio-egress
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls-port
      protocol: TLS
    hosts:
    - 'omega-mysql2-01.omegaworld.net'
    tls:
      mode: ISTIO_MUTUAL
