manifests/golden2/mysql02-01/dr-mysql2-01.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: omega-mysql2-01
  namespace: istio-egress
spec:
  host: omega-mysql2-01.omegaworld.net 
  subsets:
  - name: omega-mysql2-01-tcp
    trafficPolicy:
      outlierDetection:
        splitExternalLocalOriginErrors: true
        consecutiveLocalOriginFailures: 1
        consecutiveGatewayErrors: 1
        consecutive5xxErrors: 1
        interval: 5s
        baseEjectionTime: 5m
        maxEjectionPercent: 60
      loadBalancer:
        simple: LEAST_REQUEST
      connectionPool:
        tcp:
          maxConnections: 100
          connectTimeout: 10s
