manifests/golden2/mysql02-01/se-omega-mysql2-01.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: omega-mysql2-01
  namespace: istio-egress
spec:
  hosts:
  - omega-mysql2-01.omegaworld.net
  endpoints:
  - address: 192.168.0.4
  addresses:
  - 192.168.0.4/32
  ports:
  - number: 3306
    name: tcp-port-mesh
    protocol: TCP
  - number: 443
    name: tls-port-egress
    protocol: TLS
  resolution: STATIC
  location: MESH_EXTERNAL
