manifests/golden2/mysql02-01/vs-omega-mysql2-01.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: omega-mysql2-01
  namespace: istio-egress
spec:
  hosts:
  - omega-mysql2-01.omegaworld.net
  gateways:
  - egress-omega-mysql2-01
  - mesh
  tcp:
  - match:
    - gateways:
      - mesh
      port: 3306
    route:
    - destination:
        host: istio-egressgateway.istio-egress.svc.cluster.local
        port:
          number: 443
        subset: omega-mysql2-01-tls
      weight: 100
  - match:
    - gateways:
      - egress-omega-mysql2-01
      port: 443
    route:
    - destination:
        host: omega-mysql2-01.omegaworld.net
        port:
          number: 3306
        subset: omega-mysql2-01-tcp
      weight: 100
