manifests/golden2/mysql02-01/external-auth-tcp.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: egress-auth-tcp
  namespace: istio-egress
spec:
  selector:
    matchLabels:
      istio: egressgateway
  rules:
  - when:
    - key: connection.sni
      values:
      - "www.httpbin.org"
      - "www.cnn.com"
    - key: source.principal
      values:
      - "wl.dev.omegaworld.net/ns/myapp/sa/sleep"
      - "wl.dev.omegaworld.net/ns/myapp/sa/swissknife"
  - when:
    - key: connection.sni
      values: 
      - "www.google.com"
    - key: source.principal
      values: 
      - "wl.dev.omegaworld.net/ns/myapp/sa/swissknife"
  - when:
    - key: connection.sni
      values:
      - "mysql-a.omegaworld.net"
    - key: source.principal
      values:
      - "wl.dev.omegaworld.net/ns/myapp/sa/mysql-client"
  - when:
    - key: connection.sni
      values:
      - "omega-mysql-1.omegaworld.net"
    - key: source.principal
      values:
      - "wl.dev.omegaworld.net/ns/myapp/sa/mysql-client"
  - when:
    - key: connection.sni
      values:
      - "omega-mysql2-01.omegaworld.net"
    - key: source.principal
      values:
      - "wl.dev.omegaworld.net/ns/myapp/sa/mysql-client"  
  action: ALLOW
